[gd_scene load_steps=8 format=3 uid="uid://iwpupt74thnc"]

[ext_resource type="FontFile" uid="uid://1vp8mppnu13g" path="res://assets/fonts/LuckiestGuy-Regular.ttf" id="1_sho6v"]
[ext_resource type="Script" path="res://scenes/projectile_a/projectile_a.gd" id="1_tqa7h"]
[ext_resource type="AudioStream" uid="uid://dix5nxd0ob0un" path="res://assets/audio/score.wav" id="3_tw3aj"]

[sub_resource type="LabelSettings" id="LabelSettings_vl2eg"]
font = ExtResource("1_sho6v")
font_size = 48
font_color = Color(0, 0.85098, 0.364706, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_ujlea"]
radius = 19.0263

[sub_resource type="Animation" id="Animation_0huto"]
resource_name = "rotation"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ProjectileArea:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nntin"]
_data = {
"rotation": SubResource("Animation_0huto")
}

[node name="ProjectileA" type="Node2D"]
rotation = 6.28319
script = ExtResource("1_tqa7h")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(48, -3.00001)

[node name="ProjectileArea" type="Area2D" parent="."]

[node name="Label" type="Label" parent="ProjectileArea"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.5
offset_top = -24.0
offset_right = 15.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "A"
label_settings = SubResource("LabelSettings_vl2eg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="ProjectileArea"]
position = Vector2(-8.74228e-07, -5)
shape = SubResource("CircleShape2D_ujlea")

[node name="AnimationPlayer" type="AnimationPlayer" parent="ProjectileArea"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_nntin")
}
autoplay = "rotation"

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_tw3aj")

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
[connection signal="body_entered" from="ProjectileArea" to="." method="_on_projectile_area_body_entered"]
